--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Eventually</h1>
-				<p>A simple template for telling the world when you'll launch<br />
-				your next big thing. Brought to you by <a href="http://html5up.net">HTML5 UP</a>.</p>
+				<h1>AI PRODUCTS</h1>
+				<p>Brought to you by <a href="https://www.quantiai.one">QUANTI AI</a>.</p>
 			</header>
 
 		<!-- Signup Form -->
